signup route, user db improvements
